--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <div id="payment-footer" class="bg-gray-100 p-8 md:p-12 mt-12 text-xs">
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Payment Information:</h4>
-                            <p class="text-gray-500 mb-2">All payment is final and not refund are entertained.</p>
+                            <p class="text-gray-500 mb-2">All payment is final and refund is not entertained.</p>
                             <table class="text-gray-600 mb-8">
                                 <tbody>
                                     <tr>
