--- a/index.html
+++ b/index.html
@@ -312,6 +312,32 @@
                              <p class="font-semibold text-gray-700 text-xs">Notes:</p>
                              <p id="preview-notes" class="text-xs text-gray-600 whitespace-pre-line mt-1"></p>
                         </div>
+
+                        <!-- Signature Section (Only for Claim) -->
+                        <div id="signature-section" class="mt-20 hidden">
+                            <div class="grid grid-cols-4 gap-x-6">
+                                <div class="text-center">
+                                    <div class="border-t-2 border-gray-400 pt-2">
+                                        <p class="text-xs font-semibold text-gray-700">Prepared By</p>
+                                    </div>
+                                </div>
+                                <div class="text-center">
+                                    <div class="border-t-2 border-gray-400 pt-2">
+                                        <p class="text-xs font-semibold text-gray-700">Checked By</p>
+                                    </div>
+                                </div>
+                                <div class="text-center">
+                                    <div class="border-t-2 border-gray-400 pt-2">
+                                        <p class="text-xs font-semibold text-gray-700">Approved By</p>
+                                    </div>
+                                </div>
+                                <div class="text-center">
+                                    <div class="border-t-2 border-gray-400 pt-2">
+                                        <p class="text-xs font-semibold text-gray-700">Verified By</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- Footer -->
                     <div id="payment-footer" class="bg-gray-100 p-8 md:p-12 mt-12 text-xs">
@@ -390,7 +416,8 @@
             const paymentFooter = document.getElementById('payment-footer');
             const clientFormHeader = document.getElementById('client-form-header');
             const previewClientHeader = document.getElementById('preview-client-header');
-            
+            const signatureSection = document.getElementById('signature-section');
+
             document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
             document.querySelector(`.tab-button[data-type="${tabName}"]`).classList.add('active');
 
@@ -399,6 +426,7 @@
             previewClientHeader.textContent = "Bill To:";
             previewDueDateLabel.textContent = "Due Date:";
             paymentFooter.style.display = 'block';
+            signatureSection.classList.add('hidden');
 
             switch(tabName) {
                 case 'quotation':
@@ -429,6 +457,7 @@
                     clientFormHeader.textContent = "Staff Information";
                     previewClientHeader.textContent = "Claimant:";
                     paymentFooter.style.display = 'none';
+                    signatureSection.classList.remove('hidden');
                     break;
             }
             updatePreview();
