--- a/index.html
+++ b/index.html
@@ -216,6 +216,17 @@
                          </div>
                      </div>
 
+                     <!-- Signature Names (Only for Claim) -->
+                     <div id="signature-names-form" class="bg-white p-6 rounded-lg shadow hidden">
+                         <h3 class="text-xl font-semibold mb-4 border-b pb-2">Signature Details</h3>
+                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                             <input id="preparedBy" type="text" placeholder="Prepared By (Name)" class="form-input" oninput="updatePreview()">
+                             <input id="checkedBy" type="text" placeholder="Checked By (Name)" class="form-input" oninput="updatePreview()">
+                             <input id="approvedBy" type="text" placeholder="Approved By (Name)" class="form-input" oninput="updatePreview()">
+                             <input id="verifiedBy" type="text" placeholder="Verified By (Name)" class="form-input" oninput="updatePreview()">
+                         </div>
+                     </div>
+
                     <!-- Action Button -->
                     <div id="status-message" class="text-center p-3 rounded-md hidden"></div>
                     <div class="mt-2">
@@ -317,23 +328,31 @@
                         <div id="signature-section" class="mt-20 hidden">
                             <div class="grid grid-cols-4 gap-x-6">
                                 <div class="text-center">
-                                    <div class="border-t-2 border-gray-400 pt-2">
-                                        <p class="text-xs font-semibold text-gray-700">Prepared By</p>
+                                    <p class="text-xs font-semibold text-gray-700 mb-2">Prepared By</p>
+                                    <div class="h-16"></div>
+                                    <div class="border-t-2 border-gray-800 pt-2">
+                                        <p id="preview-preparedBy" class="text-xs font-medium text-gray-800"></p>
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <div class="border-t-2 border-gray-400 pt-2">
-                                        <p class="text-xs font-semibold text-gray-700">Checked By</p>
+                                    <p class="text-xs font-semibold text-gray-700 mb-2">Checked By</p>
+                                    <div class="h-16"></div>
+                                    <div class="border-t-2 border-gray-800 pt-2">
+                                        <p id="preview-checkedBy" class="text-xs font-medium text-gray-800"></p>
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <div class="border-t-2 border-gray-400 pt-2">
-                                        <p class="text-xs font-semibold text-gray-700">Approved By</p>
+                                    <p class="text-xs font-semibold text-gray-700 mb-2">Approved By</p>
+                                    <div class="h-16"></div>
+                                    <div class="border-t-2 border-gray-800 pt-2">
+                                        <p id="preview-approvedBy" class="text-xs font-medium text-gray-800"></p>
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <div class="border-t-2 border-gray-400 pt-2">
-                                        <p class="text-xs font-semibold text-gray-700">Verified By</p>
+                                    <p class="text-xs font-semibold text-gray-700 mb-2">Verified By</p>
+                                    <div class="h-16"></div>
+                                    <div class="border-t-2 border-gray-800 pt-2">
+                                        <p id="preview-verifiedBy" class="text-xs font-medium text-gray-800"></p>
                                     </div>
                                 </div>
                             </div>
@@ -417,6 +436,7 @@
             const clientFormHeader = document.getElementById('client-form-header');
             const previewClientHeader = document.getElementById('preview-client-header');
             const signatureSection = document.getElementById('signature-section');
+            const signatureNamesForm = document.getElementById('signature-names-form');
 
             document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
             document.querySelector(`.tab-button[data-type="${tabName}"]`).classList.add('active');
@@ -427,6 +447,7 @@
             previewDueDateLabel.textContent = "Due Date:";
             paymentFooter.style.display = 'block';
             signatureSection.classList.add('hidden');
+            signatureNamesForm.classList.add('hidden');
 
             switch(tabName) {
                 case 'quotation':
@@ -458,6 +479,7 @@
                     previewClientHeader.textContent = "Claimant:";
                     paymentFooter.style.display = 'none';
                     signatureSection.classList.remove('hidden');
+                    signatureNamesForm.classList.remove('hidden');
                     break;
             }
             updatePreview();
@@ -535,7 +557,7 @@
             document.getElementById('preview-clientAddress').textContent = document.getElementById('clientAddress').value;
             document.getElementById('preview-clientEmail').textContent = document.getElementById('clientEmail').value;
             document.getElementById('preview-clientPhone').textContent = document.getElementById('clientPhone').value;
-            
+
             // Update document details
             document.getElementById('preview-docNumber').textContent = document.getElementById('docNumber').value;
             const dateValue = document.getElementById('docDate').value;
@@ -547,6 +569,14 @@
             }
             document.getElementById('preview-docDueDate').textContent = document.getElementById('docDueDate').value;
             document.getElementById('preview-notes').textContent = document.getElementById('notes').value;
+
+            // Update signature names (for Claim)
+            if (currentTab === 'claim') {
+                document.getElementById('preview-preparedBy').textContent = document.getElementById('preparedBy').value;
+                document.getElementById('preview-checkedBy').textContent = document.getElementById('checkedBy').value;
+                document.getElementById('preview-approvedBy').textContent = document.getElementById('approvedBy').value;
+                document.getElementById('preview-verifiedBy').textContent = document.getElementById('verifiedBy').value;
+            }
 
             const itemsBody = document.getElementById('preview-items-body');
             itemsBody.innerHTML = '';
@@ -751,6 +781,12 @@
             document.getElementById('notes').value = doc.Notes;
             document.getElementById('taxRate').value = doc.TaxRate;
 
+            // Populate signature fields (for Claim)
+            document.getElementById('preparedBy').value = doc.PreparedBy || '';
+            document.getElementById('checkedBy').value = doc.CheckedBy || '';
+            document.getElementById('approvedBy').value = doc.ApprovedBy || '';
+            document.getElementById('verifiedBy').value = doc.VerifiedBy || '';
+
             // Populate items
             const itemsContainer = document.getElementById('items-container');
             itemsContainer.innerHTML = ''; // Clear existing items
@@ -861,6 +897,10 @@
                 taxAmount: taxAmount,
                 totalAmount: totalAmount,
                 notes: document.getElementById('notes').value,
+                preparedBy: document.getElementById('preparedBy').value || '',
+                checkedBy: document.getElementById('checkedBy').value || '',
+                approvedBy: document.getElementById('approvedBy').value || '',
+                verifiedBy: document.getElementById('verifiedBy').value || '',
             };
             
             const payload = {
