--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                         <button onclick="switchTab('invoice')" class="tab-button whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm border-transparent" data-type="invoice">Invoice</button>
                         <button onclick="switchTab('receipt')" class="tab-button whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm border-transparent" data-type="receipt">Receipt</button>
                         <button onclick="switchTab('purchase-order')" class="tab-button whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm border-transparent" data-type="purchase-order">Purchase Order</button>
+                        <button onclick="switchTab('payment-request')" class="tab-button whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm border-transparent" data-type="payment-request">Payment Request</button>
                         <button onclick="switchTab('claim')" class="tab-button whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm border-transparent" data-type="claim">Claim</button>
                     </nav>
                 </div>
@@ -250,21 +251,21 @@
                                     <p id="preview-companyAddress" class="whitespace-pre-line"></p>
                                 </div>
                             </div>
-                            <div class="text-right">
+                            <div class="text-right" style="min-width: 250px;">
                                 <h1 id="preview-docType" class="text-2xl font-bold uppercase text-gray-800">Invoice</h1>
-                                <table class="invoice-details-table mt-2 text-xs text-gray-600">
+                                <table class="invoice-details-table mt-2 text-xs text-gray-600 ml-auto">
                                     <tbody>
                                         <tr>
-                                            <td class="font-semibold pr-4">NO:</td>
-                                            <td id="preview-docNumber"></td>
+                                            <td class="font-semibold pr-4 text-right">NO:</td>
+                                            <td id="preview-docNumber" class="text-left"></td>
                                         </tr>
                                         <tr>
-                                            <td class="font-semibold pr-4">Date:</td>
-                                            <td id="preview-docDate"></td>
+                                            <td class="font-semibold pr-4 text-right">Date:</td>
+                                            <td id="preview-docDate" class="text-left"></td>
                                         </tr>
                                         <tr>
-                                            <td id="preview-dueDateLabel" class="font-semibold pr-4">Due Date:</td>
-                                            <td id="preview-docDueDate"></td>
+                                            <td id="preview-dueDateLabel" class="font-semibold pr-4 text-right">Due Date:</td>
+                                            <td id="preview-docDueDate" class="text-left"></td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -471,6 +472,15 @@
                     previewDueDateLabel.textContent = "Delivery Date:";
                     paymentFooter.style.display = 'none';
                     break;
+                case 'payment-request':
+                    docNumberInput.placeholder = "Payment Request #";
+                    previewDocType.textContent = "Payment Request";
+                    previewDueDateLabel.textContent = "Request Date:";
+                    previewClientHeader.textContent = "Request From:";
+                    paymentFooter.style.display = 'none';
+                    signatureSection.classList.remove('hidden');
+                    signatureNamesForm.classList.remove('hidden');
+                    break;
                 case 'claim':
                     docNumberInput.placeholder = "Claim #";
                     previewDocType.textContent = "Claim";
@@ -570,8 +580,8 @@
             document.getElementById('preview-docDueDate').textContent = document.getElementById('docDueDate').value;
             document.getElementById('preview-notes').textContent = document.getElementById('notes').value;
 
-            // Update signature names (for Claim)
-            if (currentTab === 'claim') {
+            // Update signature names (for Claim and Payment Request)
+            if (currentTab === 'claim' || currentTab === 'payment-request') {
                 document.getElementById('preview-preparedBy').textContent = document.getElementById('preparedBy').value;
                 document.getElementById('preview-checkedBy').textContent = document.getElementById('checkedBy').value;
                 document.getElementById('preview-approvedBy').textContent = document.getElementById('approvedBy').value;
